welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: illegal start of simple expression
                      if (x==0) {x=y+1;var diag2 = diag +1;y=0} else var diag2 = diag
                                                                     ^